[package]
authors = ["Momo-AUX1"]
name = "devstoreSDK"
version = "0.4.9"
edition = "2024"
build = "build.rs"

[dependencies]
reqwest = { version = "0.12.15", features = ["multipart", "blocking"] }
serde_json = "1.0.140"
walkdir = "2.5.0"
zip = "2.6.0"
sdl2 = "0.35"
libloading = "0.7"
serde = { version = "1.0.219", features = ["derive"] }
dirs = "6.0.0"
rand = "0.9.1"
toml = "0.7"
once_cell = "1.20"
tungstenite = { version = "0.26.2", features = ["rustls-tls-native-roots"] }
roxmltree = "0.20"
rustls = { version = "0.23.25", default-features = false, features = ["ring", "std"] }

[target.'x86_64-pc-windows-gnu'.dependencies]
winreg = "0.52"

[lib]
crate-type = ["cdylib"]
